--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "Tracyrobot",
+      "name": "TAP",
       "description": "Telegram group management bot.",
       "keywords": [
          "telegram",
@@ -9,7 +9,7 @@
          "Masha"
       ],
     "logo": "https://telegra.ph/file/199685f557f7bef272.jpg",
-   "repository": "https://github.com/war-legend/tracyRoBot",
+   "repository": "https://github.com/Parkseojoon2005/TRACYROBOT",
    "addons": [
       {
          "options": {
